--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": ">2.2.0rc1",
         "rwoverdijk/assetmanager": "1.*",
-        "zendframework/zend-developer-tools": "dev-master"
+        "zendframework/zend-developer-tools": "dev-master",
+        "zf-commons/zfc-user": "dev-master"
     }
 }
