--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": ">2.2.0rc1",
-        "rwoverdijk/assetmanager": "1.*",
         "zendframework/zend-developer-tools": "dev-master",
-        "zf-commons/zfc-user": "dev-master"
+        "bjyoungblood/bjy-profiler": "dev-master"
     }
 }
