--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,5 @@
+php_value display_errors 1
+
 RewriteEngine On
 # The following rule tells Apache that if the requested filename
 # exists, simply serve it.
