--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.2.*",
         "zendframework/zend-developer-tools": "dev-master",
+        "bjyoungblood/bjy-profiler": "dev-master",
         "zf-commons/zfc-user": "dev-master"
     }
 }
