--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "zendframework/zendframework": "2.2.*",
         "zendframework/zend-developer-tools": "dev-master",
         "bjyoungblood/bjy-profiler": "dev-master",
-        "zf-commons/zfc-user": "dev-master"
+        "zf-commons/zfc-user": "dev-master",
+        "zf-commons/zfc-rbac": "dev-master"
     }
 }
